--- a/social_media_frontend/package.json
+++ b/social_media_frontend/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "pinia": "^2.3.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
+    "secure-ls": "^2.0.0",
     "vue": "^3.5.13",
+    "vue-persistedstate": "^1.2.5",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
