--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@ social_media_backend/.pytype/
 social_media_backend/cython_debug/
 social_media_backend/.pypirc
 env
+social_media_backend/static/media/post_attachments
+social_media_backend/static/media/avatars
