--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,5 @@ social_media_backend/.pypirc
 env
 social_media_backend/static/media/post_attachments
 social_media_backend/static/media/avatars
+
+notes.txt
