--- a/Docker/Mysql/docker-compose.yml
+++ b/Docker/Mysql/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - /home/data:/var/lib/mysql
+      - /home/Docker/db/social_media:/var/lib/mysql
 
 volumes:
   mysql_data:
