--- a/Docker/Redis/docker-compose.yml
+++ b/Docker/Redis/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - /home/redis:/data
+      - /home/Docker/redis/social_media:/data
     command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"] 
 
 volumes:
